Add tests for doc unit editor
Addresses RISDEV-57